# OmniGrid

./: .dockerignore  .gitattributes  .gitignore  .jshintrc  .stylelintrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  auth.py  docker-compose.yml  eslint.config.js  main.py  main_2.py  main_routes.py  main_routes_extra.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/: dependabot.yml
.run/: Lint__all_.run.xml  Lint__install_pre_commit_hook_.run.xml  Lint__list_rules_.run.xml  Lint__staged_.run.xml
docs/: README.md  RELEASE_PROCESS.md  grafana_dashboard_omnigrid.example.json
logic/: __init__.py  ai.py  ai_2.py  ai_extras.py  asset_inventory.py  auth.py  backups.py  beszel.py  coerce.py  config_export.py  cooldown.py  datetime_fmt.py  datetime_format.py  db.py  dns_skip.py  docker_backend.py  docker_direct.py  env_keys.py  errors.py  events.py  external_urls.py  favicon_cache.py  gather.py  host_baseline.py  host_baseline_sampler.py  host_beszel_sampler.py  host_http_sampler.py  host_metrics_sampler.py  host_net_sampler.py  host_pulse_sampler.py  host_webmin_sampler.py  http_probe.py  i18n.py  image_cache.py  logs.py  merge.py  metrics.py  migrations.py  node_exporter.py  notify_telegram.py  (+39 more)
main_pkg/: __init__.py  _resolver.py  admin_ai_routes.py  admin_stats_routes.py  apps_routes.py  auth_routes.py  core.py  core_b.py  hosts_merge_routes.py  hosts_provider_routes.py  hosts_routes.py  hosts_ssh_routes.py  main_b.py  main_b2.py  (+11 more)
(+334 files in other folders)
