[project]
name = "omnigrid"
description = "Portainer-native update + management dashboard for a Docker Swarm cluster."
requires-python = ">=3.10"
dynamic = ["version"]

[tool.pyright]
pythonVersion = "3.10"

[tool.mypy]
python_version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
